--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>Visualização 3D em RA</title>
+    <title>Micela RA</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
-      body { margin: 0; }
+      body { margin: 0; background: #000; }
       model-viewer { width: 100vw; height: 100vh; }
     </style>
   </head>
   <body>
     <model-viewer
-      src="https://github.com/kauank3/micela-ra/raw/main/micela-v2.glb"
+      src="micela-v2.glb"
       ar
       ar-modes="scene-viewer webxr quick-look"
       auto-rotate
